2007-11-13 Jim Garlick <garlick.jim@gmail.com>

	* src/hp1630.c : Swallow InvAsm with XX learn string.
	Add -d option to set the date [Rudolf Reuter].
	
	* htdocs/index.html : Correct print screen example [Rudolf Reuter]

	* htdocs/filer.gif : Regenerate with mono colors [Rudolf Reuter].

	* htdocs/dinotrace.gif : Restore corrupted image.

	* src/errstr.[ch] : Folded in with util.[ch], renamed errtab to
	strtab, finderr() to findstr(), added rfindstr(), changed 
	"unknown error %d" to "unknown code %d". 

	* src/gpib.[ch] : Add gpib-utils.conf config file support with
	gpib_default_addr().  Remove byaddr and byname initialization
	functions and have all initialization go through gpib_init().

	* src/* : Update to reflect initialization and error string handling
	changes in gpib.[ch].

2007-11-11 Jim Garlick <garlick.jim@gmail.com>

	* src/dg535.c : Added trigger control functions.

2007-11-10 Jim Garlick <garlick.jim@gmail.com>

	* src/ics8000.x : Corrected several errors [Jay Berg]

	* src/ics8065.c, src/ics.[ch] : Add remaining functions.

2007-11-09 Jim Garlick <garlick.jim@gmail.com>

	* src/ics8000.x : Added ICSCONFIG RPCL from 8065 manual.

	* src/ics.[ch] : Wrappers for ICSCONFIG RPC.

	* src/ics8065.c : New utility for accessing ICS 8065 error log.

2007-11-07 Jim Garlick <garlick.jim@gmail.com>

	* src/vxi11.x : Added VXI_WAITLOCK, VXI_ENDW, and VXI_TERMCHRSET
	flag definitions per VXI-11 spec.

	* src/gpib.c : Set defaults for various ib flags and use them
	to set VXI-11 flags as appropriate.

	* src/dg535.c : Implement _interpret_status() callback.
	Add output control functions.

2007-11-06 Jim Garlick <garlick.jim@gmail.com>

	* src/vxi11.x : New VXI-11 RPCL from http://www.agilent.com/find/linux.

	* Makefile : Build VXI-11 support with rpcgen.

	* src/gpib.c : Add VXI-11 support.

	* : Rename local wrapper functions from gpib_ib* to gpib_*.

	* README.vxi : Description of VXI-11 support.

2006-10-01 Jim Garlick <garlick.jim@gmail.com>
