@@ -25,8 +25,6 @@ hp3455 \- control HP 3455A digital voltmeter
 .fi
 .SH DESCRIPTION
 \fBhp3455\fR controls the HP 3455A digital voltmeter via its GPIB interface.
-The instrument is presumed to be attached to GPIB adapter 0 and configured 
-with an entry in /etc/gpib.conf (see CONFIGURATION below).
 .PP
 \fBhp3455\fR performs actions selected on the command line in a fixed sequence:
 .IP
@@ -124,17 +122,6 @@ set xrange[0:]
 set yrange[-50:50]
 set title "HP 3455A Voltmeter Test"
 plot 'sample.dat' title "Sample Plot" with linesp;
-.fi
-.SH "CONFIGURATION"
-The /etc/gpib.conf entry for this instrument included the following
-parameters
-.nf
-eos = 0xa
-set-reos = no
-set-bin = no
-set-xeos = no
-set-eot = yes
-timeout = T30s
 .fi
 .SH "SEE ALSO"
 "HP 3455A Digital Voltmeter Operating and Service Manual", July 1979.
