@@ -25,8 +25,7 @@ r5005 \- control Racal-Dana 5005 digital multimeter
 .fi
 .SH DESCRIPTION
 \fBr5005\fR controls the Racal-Dana 5005 digital multimeter via its GPIB 
-interface.  The instrument is presumed to be attached to GPIB adapter 0 and 
-configured with an entry in /etc/gpib.conf (see CONFIGURATION below).
+interface.  
 .PP
 \fBr5005\fR performs actions selected on the command line in a fixed sequence:
 .IP
@@ -97,15 +96,6 @@ set xrange[0:]
 set yrange[-50:50]
 set title "Racal-Dana 5005 Multimeter Test"
 plot 'sample.dat' title "Sample Plot" with linesp;
-.fi
-.SH "CONFIGURATION"
-The /etc/gpib.conf entry for this instrument included the following
-parameters 
-.nf
-eos = 0xa
-set-reos = yes
-set-eot = yes
-timeout = T30s
 .fi
 .SH "SEE ALSO"
 Racal Dana 5005 Digital Multimeter Operating and Service Manual, Feb. 1986.
